sasql/tests/compile_fail/type_mismatch.stderr
error: type mismatch for parameter `$id`: declared `&str` but PostgreSQL expects `int4` (OID 23)
 --> tests/compile_fail/type_mismatch.rs:3:13
  |
3 |       let _ = sasql::query!(
  |  _____________^
4 | |         "SELECT id FROM users WHERE id = $id: &str"
5 | |     );
  | |_____^
  |
  = note: this error originates in the macro `sasql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
